--- a/package.json
+++ b/package.json
@@ -9,15 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "14.2.15",
-    "@types/node": "22.10.0",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "eslint": "9.15.0",
-    "eslint-config-next": "15.0.3",
-    "next": "15.0.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "typescript": "5.7.2"
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@next/font": "13.1.1",
+    "@tanstack/react-query": "^5.61.4",
+    "@tanstack/react-query-devtools": "^5.61.4",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "axios": "^1.7.8",
+    "eslint": "^8.50.0",
+    "next": "^13.1.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.2",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
+    "typescript": "4.9.4",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   }
 }
